@@ -4507,3 +4507,4 @@
   EntityTestUnit moved into org.jminor.framework.domain.testing
   EntityApplicationPanelTestUnit and EntityEditPanelTestUnit moved into org.jminor.swing.framework.ui.testing
   Ant build jdeps target added
+  REST plugin uses Base64 instead of DatatypeConverter
